--- a/ERPWeb/Views/AgroConfiguration/RawMaterialReturnList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/RawMaterialReturnList.cshtml
@@ -6,16 +6,8 @@
 
 <div class="row">
     <div class="col-md-12">
-        <div class="card card-primary card-outline card-tabs" style="margin-top:-20px">
-            <div class="card-header p-0 pt-1 border-bottom-0">
-                <ul class="nav nav-tabs" id="custom-tabs-two-tab" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" id="custom-tabs-two-RawMaterialReturnList-tab" data-toggle="pill" href="#custom-tabs-two-RawMaterialReturnList" role="tab" aria-controls="custom-tabs-two-RawMaterialReturnList" aria-selected="true">Raw Material Return List</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="card-body">
-                <div class="tab-content" id="custom-tabs-two-tabContent">
+
+
                     @Html.AntiForgeryToken()
                     <div class="tab-pane fade show active" id="custom-tabs-two-RawMaterialReturnList" role="tabpanel" aria-labelledby="custom-tabs-two-RawMaterialReturnList-tab">
                         <div class="row" style="margin-top:-15px">
@@ -38,14 +30,14 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12" style="margin-top:-10px">
-                                <div class="card card-navy">
+                                <div class="card card-gray-dark">
                                     <div class="card-header">
-                                        <div class="row">
-                                            <div class="col-md-2">
-                                                <h5 class="text-start">Search</h5>
+                                        <div class="row ">
+                                            <div class="col-md-2 float-right">
+                                                <h5 class="text-right">Search By</h5>
                                             </div>
 
-                                            <div class="col-md-3 float-left">
+                                            <div class="col-md-3 ">
                                                 <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
 
                                             </div>
@@ -53,18 +45,6 @@
                                        
                                     </div>
                                     
-                                    @*<div class="card-body text-sm">
-            <div class="row" style="margin-top:-15px">
-
-                <div class="col-md-3 float-right">
-                    <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
-
-                </div>
-
-
-            </div>
-
-        </div>*@
                                 </div>
                             </div>
                             <div class="col-md-12" style="margin-top:-10px">
@@ -78,9 +58,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
+
     </div>
 </div>
 
