--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -24,96 +24,63 @@
         border-radius: 6px;
     }
 </style>
-<div class="row" style="background-color:#e7f1f6">
+<div class="row" style=" margin-top: -30px">
     <div class="col-md-12">
-        <div class="card  shadow card card-primary card-outline card-tabs" style="margin-top:-20px">
-            <div class="card-header p-0 pt-1 border-bottom-0">
+        <div class="card  shadow card card-outline card-tabs" style="margin-top:-30px">
 
-                <ul class="nav nav-tabs nav-pills" id="custom-tabs-two-tab" role="tablist">
-                    <li class="nav-item">
-                        <a class="nav-link active" id="custom-tabs-two-pstockrawmaterialqty-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialqty" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialqty" aria-selected="false"> Raw Material Stock</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " id="custom-tabs-two-pstockrawmaterialList-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialList" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialList" aria-selected="false">Purchase & Stock Raw Material list</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="custom-tabs-two-pstockrawmaterial-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterial" role="tab" aria-controls="custom-tabs-two-pstockrawmaterial" aria-selected="false">Purchase And Stock</a>
-                    </li>
 
-                </ul>
+            <ul class="nav nav-tabs nav-pills bg-navy" @*style="color: #2F4F4F"*@ id="custom-tabs-two-tab" role="tablist">
+                <li class="nav-item">
+                    <a class="nav-link active text-white" id="custom-tabs-two-pstockrawmaterialqty-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialqty" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialqty" aria-selected="false"> Raw Material Stock</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" id="custom-tabs-two-pstockrawmaterialList-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterialList" role="tab" aria-controls="custom-tabs-two-pstockrawmaterialList" aria-selected="false">Purchase & Stock Raw Material list</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" id="custom-tabs-two-pstockrawmaterial-tab" data-toggle="pill" href="#custom-tabs-two-pstockrawmaterial" role="tab" aria-controls="custom-tabs-two-pstockrawmaterial" aria-selected="false">Purchase And Stock</a>
+                </li>
 
-            </div>
+            </ul>
+
+
         </div>
 
         <div class="card-body shadow">
             <div class="tab-content" id="custom-tabs-two-tabContent">
 
                 <div class="tab-pane fade show " id="custom-tabs-two-pstockrawmaterialList" role="tabpanel" aria-labelledby="custom-tabs-two-pstockrawmaterialList-tab">
-                    <div class="row" style="margin-top:-15px">
-                        <div class="col-md-12">
-                            <div class="card shadow card-gray-dark">
 
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
+                    <div class="row" style=" margin-top: -30px">
                         <div class="col-md-12">
-                            <div class="card card-navy shadow">
+                            @*<div class="card card-navy shadow" style=" margin-top: -15px">*@
+                            <div class="card card-gray-dark">
                                 <div class="card-header">
-                                    <h6 class="card-title">Search By</h6>
-
-
-                                    @*<div class="row text-sm">*@
-
-
-
-                                    @*<div class="col-md-2">
-                                            <h4>Search by:</h4>
-
-                                        </div>
-                                        <div class="col-md-3 float-right">
-                                            <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
-
-                                        </div>
-                                        <div class="col-7">
-
-                                        </div>*@
-
-                                    @*</div>*@
-                                </div>
-                                <div class="card-body text-sm">
-                                    <div class="row" style="margin-top:-15px">
+                                    <div class="row justify-content-center">
                                         <div class="col-md-2">
-                                            <label class="col-form-label">Invoice No </label>
+                                            <h5 class="text-center">Search By</h5>
+                                        </div>
+                                        <div class="col-md-2">
+                                            @*<label class="col-form-label">Invoice No </label>*@
                                             <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="search Invoice" />
                                         </div>
 
                                         <div class="col-md-2">
-                                            <label class="col-form-label">PO Number </label>
+                                            @*<label class="col-form-label">PO Number </label>*@
                                             <input type="text" class="form-control form-control-sm" id="searchByPO" placeholder="search PO" />
                                         </div>
 
                                         <div class="col-md-2">
-                                            <label class="col-form-label">Challan No </label>
+                                            @*<label class="col-form-label">Challan No </label>*@
                                             <input type="text" class="form-control form-control-sm" id="searchByChallan" placeholder="search Challan" />
                                         </div>
 
                                         <div class="col-md-2">
-                                            <label for="ddlSupplierName1" class="col-form-label">Supplier Name</label>
+                                            @*<label for="ddlSupplierName1" class="col-form-label">Supplier Name</label>*@
                                             @Html.DropDownList("ddlSupplierName1", (IEnumerable<SelectListItem>)ViewBag.ddlSupplierName, "--Select Supplier--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
 
                                         </div>
-
-
                                     </div>
-
-                                    @*<div class="col-md-2">
-                                            <input type="text" class="form-control form-control-sm" id="SearchInvoiceNo" placeholder="search Invoice" />
-                                        </div>*@
-
                                 </div>
-
-
                             </div>
 
                         </div>
@@ -123,8 +90,8 @@
                             <div class="card ">
                                 <div class="card-body">
                                     <div class="row">
-                                        <div class="col-md-12 text-sm text-sm" id="dataContainer" style="overflow-y:scroll">
-                                            @*@{Html.RenderAction("GetPRawmaterialStockList", new { @flag = "Initial" });}*@
+                                        <div class="col-md-12 text-sm text-sm" id="dataContainer">
+
                                         </div>
                                     </div>
                                 </div>
@@ -136,15 +103,15 @@
 
 
                 <div class="tab-pane fade show " id="custom-tabs-two-pstockrawmaterial" role="tabpanel" aria-labelledby="custom-tabs-two-pstockrawmaterial-tab">
-                    <div class="row mb-5" style="background-color:#e7f1f6">
-                        <div class="col-md-12">
+                    <div class="row mb-5">
+                        <div class="col-md-12" style="margin-top:-30px">
                             <div class="card card-navy">
                                 <div class="card-header" style="text-align: center;">
 
                                     <div class="row">
 
                                         <div class="col-md-12">
-                                            <button class="btn btn-success btn float-right" id="saveButton">SAVE <i class="fas fa-paper-plane"></i></button>
+                                            <button class="btn btn-success btn-sm btn float-right" id="saveButton">SAVE <i class="fas fa-paper-plane"></i></button>
 
                                             <h5 class="text-center text-bold">
                                                 Purchase And RawMaterial Stock
@@ -158,14 +125,13 @@
 
 
                                 @*addbodey*@
-                                <div class="card-body shadow" @*style="background-color:#e7f1f6"*@>
+                                <div class="card-body shadow">
                                     <div class="row">
 
 
 
                                         <div class="col-md-4">
-                                            <div class="container-fluid" @*style="background-color:#e7f1f6"*@>
-                                                @*border-right:4px solid #808080*@
+                                            <div class="container-fluid">
                                                 <h5 style="border-bottom:2px solid #08054e">Information</h5>
                                                 <div class="row justify-content-center">
 
@@ -178,14 +144,6 @@
                                                                 <span class="error hide req-SupplierName font-weight-bold">Supplier Name is required!</span>
                                                             </div>
 
-
-                                                            @*<div class="col-md-6">
-                                                                    <div class="form-group">
-                                                                        <label for="ddlInvoiceDate">Invoice Date</label>
-                                                                        <input type="date" class="form-control" id="ddlInvoiceDate" placeholder="Asign Date">
-                                                                        <span class="error hide req-ddlInvoiceDate font-weight-bold">date requered!</span>
-                                                                    </div>
-                                                                </div>*@
                                                             <div class="col-md-6">
                                                                 <div class="form-group">
                                                                     <label for="ddlInvoiceDate">Invoice Date</label>
@@ -358,20 +316,14 @@
 
                 @*stock*@
                 <div class="tab-pane fade show active" id="custom-tabs-two-pstockrawmaterialqty" role="tabpanel" aria-labelledby="custom-tabs-two-pstockrawmaterialqty-tab">
-                    <div class="row" style="margin-top:-15px">
-                        <div class="col-md-12">
-                            <div class="card shadow card-gray-dark">
 
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
+                    <div class="row" style="margin-top:-30px">
                         <div class="col-md-12">
-                            <div class="card card-navy shadow">
+                            <div class="card card-gray-dark shadow">
                                 <div class="card-header">
                                     <div class="row text-sm">
                                         <div class="col-md-2">
-                                            <h4>Search by:</h4>
+                                            <h5 class="text-center">Search by:</h5>
                                         </div>
                                         <div class="col-md-3 float-right">
                                             <input type="text" class="form-control form-control-sm" id="searchByAnyy" placeholder="Search by any" />
@@ -392,10 +344,12 @@
                             <div class="card ">
                                 <div class="card-body">
                                     <div class="row">
-                                        <div class="col-md-12 text-sm text-sm" id="dataContainer3" style="overflow-y:scroll">
-                                            @*@{Html.RenderAction("GetPRawmaterialStockList", new { @flag = "Initial" });}*@
+
+                                        <div class="col-md-12 text-sm text-sm" id="dataContainer3">
+
                                         </div>
                                     </div>
+
                                 </div>
                             </div>
                         </div>
@@ -403,9 +357,7 @@
                 </div>
                 @*stock*@
 
-
             </div>
-
         </div>
     </div>
 </div>
