--- a/ERPWeb/Views/AgroConfiguration/SalesReturnAdjustCreate.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SalesReturnAdjustCreate.cshtml
@@ -7,81 +7,69 @@
 
     <div class="col-md-12">
 
-        <div class="card card-navy">
-            <div class="card-header" style="text-align: center;">
 
-                <div class="row">
-                    <div class="col-md-3">
+        <div class="row" style="margin-top:-15px">
+            <div class="col-md-12">
+                <div class="card card-navy">
 
-                        <a href="/AgroConfiguration/GetSalesReturnAdjustList" class="float-left btn btn-sm btn-outline-primary" title="Go To List">
-                            <i class="fas fa-arrow-alt-circle-left"></i>
-                        </a>
-                    </div>
-                    <div class="col-md-6">
-                        <h5 class="text-center text-bold">
-                            Sales Return Adjust
-                        </h5>
-                    </div>
-                    <div class="col-md-3">
+                    <div class="card-header" style="text-align: center;">
+
+                        <div class="row">
+                            <div class="col-md-3">
+
+                                <a href="/AgroConfiguration/GetSalesReturnAdjustList" class="float-left btn btn-sm btn-outline-primary" title="Go To List">
+                                    <i class="fas fa-arrow-alt-circle-left"></i>
+                                </a>
+                            </div>
+                            <div class="col-md-6">
+                                <h5 class="text-center text-bold">
+                                    Sales Return Adjust
+                                </h5>
+                            </div>
+                            <div class="col-md-3">
+                                <button class="btn btn-success btn-sm btn float-right" id="saveButton">SAVE <i class="fas fa-paper-plane"></i></button>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
-
             </div>
-
-            <div class="card-body  mb-5" @*style="background-color:#e7f1f6"*@ id="cardWithOutRequisition">
-                <div class="row">
+        </div>
 
 
-                    <div class="col-md-12" style="margin-top:-10px">
-                        <div class="card ">
+        <div class="row">
+            <div class="col-md-12" style="margin-top:-10px">
+                <div class="card card-gray-dark ">
 
-                            <div class="card-body text-sm">
-                                <div class="row justify-content-center">
-                                    <div class="col-md-2">
-                                        <label for="ddlstokiestname">Stockiest Name </label>
-                                        @Html.DropDownList("ddlstokiestname", (IEnumerable<SelectListItem>)ViewBag.ddlstokiestname, "--Select Stokiest--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-                                    </div>
-                                    <div class="col-md-2">
-                                        <label for="ddltotalbill">Total Bill</label>
-                                        <input type="text" id="ddltotalbill" name="ddltotalpurchaseprice" class="form-control form-control-sm" readonly />
-                                    </div>
-                                    <div class="col-md-2">
-                                        <label for="ddltotalpaid">Total Paid</label>
-                                        <input type="text" id="ddltotalpaid" name="ddltotalpaid" class="form-control form-control-sm" readonly />
-                                    </div>
-                                    <div class="col-md-2">
-                                        <label for="ddltotalpaid">Total Return</label>
-                                        <input type="text" id="ddltotalreturn" name="ddltotalreturn" class="form-control form-control-sm" readonly />
-                                    </div>
-                                    <div class="col-md-1">
-                                        <label for="ddltotaldue">Total Due</label>
-                                        <input type="text" id="ddltotaldue" name="ddltotalpurchaseprice" class="form-control form-control-sm" readonly />
-                                    </div>
-
-                                    <div class="col-md-3">
-                                        <label class="control-label" for="ddlinvoiceno">Invoice No</label>
-                                        <select id="ddlinvoiceno" class="form-control form-control-sm select2">
-                                            <option value="0">Select Invoice</option>
-                                        </select>
-                                        <span class="error hide req-ddlinvoiceno">Invoice Is Required</span>
-                                    </div>
-
-                                </div>
+                    <div class="card-header text-sm ">
+                        <div class="row justify-content-center">
+                            <div class="col-md-2">
+                                <label for="ddlstokiestname">Stockiest Name </label>
+                                @Html.DropDownList("ddlstokiestname", (IEnumerable<SelectListItem>)ViewBag.ddlstokiestname, "--Select Stokiest--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                            </div>
+                            <div class="col-md-2">
+                                <label for="ddltotalbill">Total Bill</label>
+                                <input type="text" id="ddltotalbill" name="ddltotalpurchaseprice" class="form-control form-control-sm" readonly />
+                            </div>
+                            <div class="col-md-2">
+                                <label for="ddltotalpaid">Total Paid</label>
+                                <input type="text" id="ddltotalpaid" name="ddltotalpaid" class="form-control form-control-sm" readonly />
+                            </div>
+                            <div class="col-md-2">
+                                <label for="ddltotalpaid">Total Return</label>
+                                <input type="text" id="ddltotalreturn" name="ddltotalreturn" class="form-control form-control-sm" readonly />
+                            </div>
+                            <div class="col-md-1">
+                                <label for="ddltotaldue">Total Due</label>
+                                <input type="text" id="ddltotaldue" name="ddltotalpurchaseprice" class="form-control form-control-sm" readonly />
                             </div>
 
-                        </div>
-                    </div>
-
-
-                    <div class="col-md-12" style="margin-top:-10px">
-                        <div class="card">
-                            <div class="card-body">
-                                <div class="col-md-12" id="dataContainer">
-
-                                </div>
-
-                                <button class="btn btn-success btn float-right" id="saveButton">SAVE <i class="fas fa-paper-plane"></i></button>
-
+                            <div class="col-md-3">
+                                <label class="control-label" for="ddlinvoiceno">Invoice No</label>
+                                <select id="ddlinvoiceno" class="form-control form-control-sm select2">
+                                    <option value="0">Select Invoice</option>
+                                </select>
+                                <span class="error hide req-ddlinvoiceno">Invoice Is Required</span>
                             </div>
 
                         </div>
@@ -89,19 +77,35 @@
 
                 </div>
             </div>
+
 
         </div>
+
+        <div class="row">
+            <div class="col-md-12" style="margin-top:-10px">
+                <div class="card">
+            <div class="card-body">
+                <div class="col-md-12" id="dataContainer">
+
+                </div>
+                </div>
+            </div>
+            </div>
+        </div>
+
+
+
 
     </div>
 
 
-</div>
+            </div>
 
 
 
-@section scripts{
+            @section scripts{
 
-    <script type="text/javascript">
+                <script type="text/javascript">
 
 
         var ddlstokiestname = $("#ddlstokiestname");
@@ -240,18 +244,18 @@
             //alert();
             debugger;
             e.preventDefault();
-        
+
             var details = [];
             details.length = 0;
              $.each($("#tblReturnItems tbody tr"), function (index, item) {
                  var tds = $(this).children('td');
                  // tds.eq(7).children("input").is(":checked");
-           
+
                 details.push({
                     SalesReturnId: tds.eq(12).html(),
                     ISActive: tds.eq(9).children("input").is(":checked"),
 
-                 
+
 
 
                 });
@@ -283,5 +287,5 @@
         });
 
 
-    </script>
-}
+                </script>
+            }
