--- a/ERPWeb/Views/AgroConfiguration/_ALLRawMaterialReturnListview.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_ALLRawMaterialReturnListview.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewBag.Title = "List of RawMaterial Return";
     var SL = 0;
+    string badge = string.Empty;
+    string badgs = string.Empty;
 }
 <div class="row">
     <div class="col-md-12" style="overflow-y:scroll">
@@ -25,27 +27,36 @@
                 @foreach (var item in Model)
                 {
                     SL = SL + 1;
-                    <tr>
+                    badge = item.ReturnType == "Damage" ? "badge bg-danger" : item.ReturnType == "Good" ? "badge bg-success" : "";
 
-                        <td class="text-center text-bold">@SL</td>
-                        <td class="hide">@item.RawMaterialId</td>
-                        <td class="hide">@item.UnitId</td>
-                        <td class="text-center">@item.RawMaterialName</td>
-                        <td class="text-center">@item.UnitName</td>
-                        <td class="text-center">@item.Quantity</td>
-                        <td class="text-center">@item.ReturnType</td>
-                        @*<td class="text-center">@item.EntryDate</td>*@
-                        <td class="text-center">@item.Status</td>
+                    badgs = item.Status == "Approved" ? "badge bg-primary" : item.Status == "Pending" ? "badge bg-warning" : "";
+
+                <tr>
+
+                    <td class="text-center text-bold">@SL</td>
+                    <td class="hide">@item.RawMaterialId</td>
+                    <td class="hide">@item.UnitId</td>
+                    <td class="text-center">@item.RawMaterialName</td>
+                    <td class="text-center">@item.UnitName</td>
+                    <td class="text-center">@item.Quantity</td>
+                    @*<td class="text-center">@item.ReturnType</td>*@
+                    <td class="text-center" data-val="@item.ReturnType">
+                        <span class="@badge">@item.ReturnType</span>
+                    </td>
+                    @*<td class="text-center">@item.EntryDate</td>*@
+                    <td class="text-center" data-val="@item.Status">
+                    <span class="@badgs">@item.Status</span>
+                    </td>
 
 
 
-                    </tr>
+                </tr>
                 }
 
                 @if (Model.Count() == 0)
                 {
                     <tr class="text-center empty-row">
-                        <td colspan="5">
+                        <td colspan="12">
                             No Rows Found
                         </td>
                     </tr>
